# ZenUnitAndMetalMock

./: .clang-format  .clang-tidy  .flake8  .gitattributes  .gitignore  .pylintrc  .travis.yml  CMakeLists.txt  CMakeMacros.cmake  CMakeMacros.txt  CppcheckSuppressions.txt  LICENSE.md  LICENSE.txt  LinuxBuildAndInstallZenUnit.sh  LinuxCMakeBuildInstall.sh  README.md  RunAllDebugTests.sh  RunAllReleaseTests.sh  TravisCIZenUnit.sh  WindowsBuildAndInstallZenUnit.ps1  WindowsCMakeBuildInstall.ps1  ZenMock.md  ZenMockREADME.md  ZenUnit.md  appveyor.yml  codecov.yml  dev-requirements.txt  llvm-profdata-cov.py  local-sonar-project.properties  mypy.ini  run_llvm_profdata_cov.py  sonar-project.properties  travis_script.sh
ExampleTests/: CMakeLists.txt  CallAllMacrosTests.cpp  EveryZenUnitAssertion.cpp  FizzBuzzTests.cpp  IsInclusiveBetweenTests.cpp  pch.h
Examples.Test/: CMakeLists.txt  CallAllMacrosTests.cpp  FizzBuzzTests.cpp  ZenMockTests.cpp  ZenUnitExamplesTestMain.cpp  pch.h
ExamplesTests/: CMakeLists.txt  CallAllMacrosTests.cpp  FizzBuzzTests.cpp  IsInclusiveBetweenTests.cpp  ZenMockTests.cpp  ZenUnitExamplesTestMain.cpp  pch.h
MetalMock/: CMakeLists.txt  MetalMock.h  MetalMock.h~RF3753f1b.TMP
MetalMockExamples/: CMakeLists.txt  ExtendedVirtualFunctionMockingTests.cpp  FreeFunctionMockingTests.cpp  MetalMockExamplesMain.cpp  NonVirtualFunctionMockingTests.cpp  OrderedFunctionCallAssertions.cpp  OrderedFunctionCallAssertionsTests.cpp  StaticFunctionMockingTests.cpp  TemplateFunctionMockingTests.cpp  VirtualFunctionMockingExample.cpp  VirtualFunctionMockingTests.cpp  pch.h
MetalMockTests/: CMakeLists.txt  MetalMockTestMain.cpp  pch.h
MetalMockTests/0Args/: MetalMock0ArgsTester.cpp  MetalMock0ArgsTester.h  MetalMock0Tester.h  MetalMockNonVoid0Tests.cpp  MetalMockVoid0Tests.cpp  ZeroArgumentMetalMockerTests.cpp
MetalMockTests/10Args/: TenArgumentFunctionCallTests.cpp  TenArgumentMetalMockerTests.cpp
MetalMockTests/1Arg/: MetalMock1ArgTester.cpp  MetalMock1ArgTester.h  MetalMock1Tester.cpp  MetalMock1Tester.h  MetalMockVoid1Tests.cpp  NonVoidOneArgumentMetalMockerTests.cpp  OneArgumentFunctionCallTests.cpp  OneArgumentMetalMockerTests.cpp  VoidOneArgumentMetalMockerTests.cpp
MetalMockTests/2Args/: MetalMock2ArgTester.h  MetalMock2ArgsTester.cpp  MetalMock2ArgsTester.h  MetalMockVoid2ArgTests.cpp  MetalMockVoid2Tests.cpp  NonVoidTwoArgumentMetalMockerTests.cpp  TwoArgumentFunctionCallTests.cpp  TwoArgumentMetalMockerTests.cpp
MetalMockTests/3Args/: MetalMock3ArgsTester.cpp  MetalMock3ArgsTester.h  MetalMockVoid3Tests.cpp  NonVoidThreeArgumentMetalMockerTests.cpp  ThreeArgumentFunctionCallTests.cpp  (+1 more)
StaticLibrary/: Args.h  ArgsParser.cpp  CMakeLists.txt  Console.cpp  Console.h  Program.cpp  Program.h  ProgramArgs.cpp  ProgramArgs.h  ProgramNameArgs.cpp  ProgramNameArgs.h  ProgramNameProgram.cpp  ProgramNameProgram.h  pch.h
StaticLibraryTests/: ArgsParserTests.cpp  CMakeLists.txt  ProgramNameProgramTests.cpp  ProgramTests.cpp  pch.h
ZenMock/: CMakeLists.txt  ZenMock.h
ZenMockExamples/: CMakeLists.txt  FreeFunctionMockingTests.cpp  NonVirtualFunctionMockingTests.cpp  StaticFunctionMockingTests.cpp  VirtualFunctionMockingTests.cpp  pch.h
ZenMockTests/: CMakeLists.txt  ZenMockTestMain.cpp  pch.h
ZenUnit/: CMakeLists.txt  IgnoredMSVCWallWarnings.h  MetalMock.h  RunTests.cpp  RunTests.h  SingleHeader.cpp  SingleHeader.h  ZenMock.cpp  ZenMock.h  ZenUnit.cpp  ZenUnit.h  ZenUnitLibrary.h  pch.h
ZenUnit.Test/: CMakeLists.txt  ZenUnitTestMain.cpp  pch.h
ZenUnitAndMetalMock/: CMakeLists.txt  MetalMock.h  ZenUnit.h
ZenUnitCompileSpeed/: CMakeLists.txt  ZenUnitCompileSpeedMain.cpp  pch.h
ZenUnitCompileSpeedTester/: CMakeLists.txt  FiftyZenUnitTestClasses.cpp  ZenUnitCompileSpeedTesterMain.cpp  ZenUnitTestClassWithFiftyTests.cpp  ZenUnitTestClassWithOneTestAndFiftyARE_EQUALAssertions.cpp
ZenUnitCompileSpeedTests/: CMakeLists.txt  FiftyZenUnitTestClasses.cpp  ZenUnitCompileSpeedTestsMain.cpp  ZenUnitTestClassWithFiftyTests.cpp  ZenUnitTestClassWithOneTestAndFiftyARE_EQUALAssertions.cpp  pch.h
ZenUnitExamples/: CMakeLists.txt  EveryZenUnitAssertion.cpp  FizzBuzzTests.cpp  PredicateCounterTests.cpp  STARTUPAndCLEANUPTests.cpp  SetTests.cpp  TypeParameterizedTestClass.cpp  ZenUnitExamplesTestsMain.cpp  pch.h
ZenUnitFrameworkTests/: CMakeLists.txt  ZenUnitFrameworkTestsMain.cpp  ZenUnitTestsMain.cpp  pch.h
ZenUnitHelloWorld/: .directory  CMakeLists.txt  CMakeMacros.cmake
ZenUnitLibraryTests/: CMakeLists.txt  IfWindowsIgnoreTheseWarningGlobally.h  MSVCIgnoredWarnings.h  ZenUnitLibraryTestsMain.cpp  pch.h
ZenUnitTestUtils/: CMakeLists.txt  DoublyPrintableUserType.cpp  DoublyPrintableUserType.h  IntializerConstructable.cpp  IntializerConstructable.h  NonPrintableUserType.cpp  NonPrintableUserType.h  OnlyInsertionOperatorPrintableUserType.cpp  OnlyInsertionOperatorPrintableUserType.h  OnlyZenUnitEqualizerUserType.cpp  OnlyZenUnitEqualizerUserType.h  OnlyZenUnitPrintableUserType.cpp  OnlyZenUnitPrintableUserType.h  TestUtil.h  TestingNonDefaultTestResult.cpp  TestingNonDefaultTestResult.h  TestingNonDefaults.cpp  TestingNonDefaults.h  TestingTestClass.cpp  TestingTestClass.h  UserType.cpp  UserType.h  UserTypeInsOpAndZenUnitPrintable.cpp  UserTypeInsOpAndZenUnitPrintable.h  UserTypeInsertionOperatorAndZenUnitPrintable.cpp  UserTypeInsertionOperatorAndZenUnitPrintable.h  UserTypeNonPrintable.cpp  UserTypeNonPrintable.h  UserTypeOnlyZenUnitEqualizable.cpp  UserTypeOnlyZenUnitEqualizable.h  UserTypeOnlyZenUnitPrintable.cpp  UserTypeOnlyZenUnitPrintable.h  UserType_HasZenUnitEqualizer_DoesNotHaveOperatorEquals.cpp  UserType_HasZenUnitEqualizer_DoesNotHaveOperatorEquals.h  ZenUnitTestingRandomGenerator.cpp  ZenUnitTestingRandomGenerator.h  ZenUnitTestingRandomGeneratorMock.h  pch.h
ZenUnitTestedProgram/: CMakeLists.txt  CMakeMacros.cmake  CMakeMacros.txt
ZenUnitTests/: CMakeLists.txt  RunFilterParserMock.h  ZenUnitTestMain.cpp  ZenUnitTestsMain.cpp  pch.h
ZenUnitUtilsAndAssertionTests/: CMakeLists.txt  ZenUnitUtilsAndAssertionTestsMain.cpp  pch.h
(+1720 files in other folders)
