cmake_minimum_required(VERSION 3.5)
project(ZenUnit.Test)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.txt)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})

folder_source_group(Anomaly)
folder_source_group(Args)
folder_source_group_subfolder(Args Mock)
folder_source_group(Console)
folder_source_group_subfolder(Console Mock)
folder_source_group(Enums)
folder_source_group(Equalizers)
folder_source_group(Macros)
folder_source_group(ZenMock)
folder_source_group_subfolder(ZenMock 0)
folder_source_group_subfolder(ZenMock 1)
folder_source_group_subfolder(ZenMock 2)
folder_source_group_subfolder(ZenMock 3)
folder_source_group_subfolder(ZenMock 4)
folder_source_group_subfolder(ZenMock 5)
folder_source_group_subfolder(ZenMock 6)
folder_source_group_subfolder(ZenMock 7)
folder_source_group_subfolder(ZenMock Exceptions)
folder_source_group_subfolder(ZenMock Mock)
folder_source_group(Utils)
folder_source_group_subfolder(Utils Mock)
folder_source_group_subfolder(Utils Mock)
folder_source_group_subfolder(Utils Concurrency)
folder_source_group_subsubfolder(Utils Concurrency Mock)
folder_source_group_subfolder(Utils Iteration)
folder_source_group_subsubfolder(Utils Iteration Mock)
folder_source_group_subfolder(Utils Time)
folder_source_group_subsubfolder(Utils Time Mock)
folder_source_group(Registration)
folder_source_group(Results)
folder_source_group_subfolder(Results Mock)
folder_source_group(TestRunners)
folder_source_group_subfolder(TestRunners Mock)
folder_source_group(Testing)
folder_source_group(Tests)
folder_source_group_subfolder(Tests Mock)
folder_source_group(ToStringer)
folder_source_group_subfolder(ToStringer ZenUnitPrinter)
folder_source_group_subfolder(ToStringer SFINAE)
source_group("" FILES ZenUnitTestMain.cpp pch.h pch.cpp)
file(GLOB_RECURSE Sources *.h *.cpp)

add_executable(ZenUnit.Test ${Sources})
target_link_libraries(ZenUnit.Test ZenUnit)

if(UNIX)
   EnableClangOrGCCPrecompiledHeaders()
elseif(MSVC)
   EnableMSVCPrecompiledHeaders()
   AddMSVCPostBuildStepRunTests()
endif()
